[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/code/rooftop_level/spear.gd" type="Script" id=1]
[ext_resource path="res://assets/art/rooftop_level/sprites/S9_constellation_spear/S9_constellation_spear.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.5, 1.5 )

[node name="Entity" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.5, -0.5 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( -0.5, -1 )
scale = Vector2( 1.45, 0.3 )
[connection signal="collision" from="." to="." method="_on_Entity_collision"]
[connection signal="death" from="." to="." method="_on_Entity_death"]
[connection signal="health_changed" from="." to="." method="_on_Entity_health_changed"]
